# aemo-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.claude/agents/: aemo-mcp-expert.md
.github/workflows/: codeql.yml  release.yml  test.yml
examples/: claude_desktop_config.json  demo_prompts.md
src/aemo_mcp/: __init__.py  cache.py  client.py  curated.py  duid_lookup.py  feeds.py  fetch.py  models.py  parsing.py  server.py  shaping.py
src/aemo_mcp/data/: duid_snapshot.csv
src/aemo_mcp/data/curated/: daily_summary.yaml  dispatch_constraints.yaml  dispatch_price.yaml  dispatch_region.yaml  fcas_prices.yaml  generation_scada.yaml  interconnector_flows.yaml  predispatch_30min.yaml  rooftop_pv.yaml  trading_price.yaml
tests/: conftest.py  test_cache.py  test_client.py  test_curated.py  test_duid_lookup.py  test_edge_cases.py  test_feeds.py  test_fetch.py  test_integration.py  test_live.py  test_mcp_protocol.py  test_parsing.py  test_regressions.py  test_resilience.py  test_server_validation.py  test_shaping.py
